[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["MaddoSaru <riquelme.madmonkey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.9.1"
ipython = "^8.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
